<resources>
    <string name="app_name">ProyectoFinal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Pantalla de opciones</string>
    <string name="Registro_words"><u>¿No tienes cuenta? REGISTRATE</u></string>
    <string name="login_button">Iniciar Sesion</string>
    <string name="invitado_button">Modo Invitado</string>
    <string name="mail_text">Introduce tu usuario</string>
    <string name="password_text">Introduce tu contraseña</string>
    <string name="registrar_button">REGISTRARME</string>
    <string name="password_text_regis_2">Repite la contraseña</string>
    <string name="supermarket"><u>Supermercados</u></string>
    <string name="IA"><u>Recetas con la IA</u></string>
    <string name="ruleta"><u>Recetas aleatorias</u></string>
    <string name="tv_recetaRandom"><u>Receta aleatoria del día</u></string>
    <string name="btn_spin">Iniciar</string>
    <string name="btn_mercadona">Mercadona</string>
    <string name="btn_eroski">Eroski</string>

    <string-array name="tags">
        <item>Todas las recetas</item>
        <item>Receta vegetariana</item>
        <item>Receta vegana</item>
        <item>Receta sin glúten</item>
    </string-array>
</resources>