<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <ImageView
        android:id="@+id/icono_registro"
        android:layout_width="88dp"
        android:layout_height="82dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/mail_text_regis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delantal" />

    <EditText
        android:id="@+id/mail_text_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/mail_text"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_text_regis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icono_registro" />

    <EditText
        android:id="@+id/password_text_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:onClick="registro"
        app:layout_constraintBottom_toTopOf="@+id/password_text_regis_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_text_regis" />

    <Button
        android:id="@+id/registrar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="56dp"
        android:onClick="registro"
        android:text="@string/registrar_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text_regis_2" />

    <EditText
        android:id="@+id/password_text_regis_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/password_text_regis_2"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registrar_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text_regis" />
</androidx.constraintlayout.widget.ConstraintLayout>