<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uno"
    tools:context=".Opciones">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/opcion1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shopping"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/opcion2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/opcion3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opcion1"
            app:srcCompat="@drawable/robot_2"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/opcion3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opcion2"
            app:srcCompat="@drawable/baseline_question_mark_24"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/supermarket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="100dp"
            android:text="@string/supermarket"
            android:textColor="#A98467"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opcion1" />

        <TextView
            android:id="@+id/IA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="100dp"
            android:text="@string/IA"
            android:textColor="#A98467"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opcion2" />

        <TextView
            android:id="@+id/ruleta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="100dp"
            android:text="@string/ruleta"
            android:textColor="#A98467"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opcion3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>